--- a/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.scss
+++ b/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.scss
@@ -1611,7 +1611,7 @@
 }
 
 h6 {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   color: #333;
   padding: 10px 16px;
@@ -1629,7 +1629,7 @@ h6 {
   margin: 0;
   background: #fff;
   border-radius: 0 0 3px 3px;
-  padding: 15px 10px;
+  padding: 10px 20px 20px 20px;
   /* height: calc(100vh - 225px); */
   ;
   overflow-y: scroll;
@@ -1831,9 +1831,21 @@ h6 {
 
 .title_note {
   text-align: left;
-  font-size: 12px;
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  // padding: 0 10px;
+}
+
+.booking-detail-information {
+  font-size: 13px;
   font-weight: 400;
-  padding: 0 10px;
+
+  p {
+    font-size: 13px;
+    font-weight: 300;
+    margin-bottom: 0.3rem;
+  }
 }
 
 .note {
@@ -1851,4 +1863,9 @@ h6 {
   border-top: none;
   margin-top: 10px;
   margin-bottom: 5px;
+}
+
+hr {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
