--- a/fe/src/app/booking/booking.component.html
+++ b/fe/src/app/booking/booking.component.html
@@ -99,15 +99,17 @@
                   <h6 class="text-primary text-uppercase">Tiện ích bổ sung</h6>
                   <p class="description">Các loại hình dịch vụ tiện ích bổ sung là bao gồm
                     các khu vực và thiết bị không bao gồm trong dịch vụ dọn dẹp.</p>
-                  <p class="description">Sau đây là <u style="font-size: 14px; font-weight: 600;">Bảng giá</u> các loại
+                  <p class="description">Sau đây là <u (click)="showPriceList()" style="font-size: 14px; font-weight: 600; cursor: pointer;">Bảng giá</u> các loại
                     hình dịch vụ tiện
                     ích HSM cũng cấp:</p>
                   <div class="extension-service">
-                    <span *ngFor="let extends of serviceExtend" [value]="extends" class="badge badge-pill badge-primary"
-                      (click)="extendsDialog()">{{extends.name}}</span>
+                    <span *ngFor="let extends of priceList" class="badge badge-pill badge-primary" [ngClass]="{'active': activeBadges[extends.parent.name]}" style="cursor: pointer;"
+                      (click)="extendsDialog(extends.parent.name)">{{extends.parent.name}}     
+                      <i class="fas" [ngClass]="{'fa-plus': !activeBadges[extends.parent.name], 'fa-minus': activeBadges[extends.parent.name]}"></i>
+                    </span>
                     <p class="listAdvanceService" style="padding-top: 1rem;" *ngIf="true">* Danh sách tiện ích đã đăng
                       ký: <span style="font-weight: 700; font-size: 15px; color: darkred;">{{
-                        listAdvanceService
+                        textListAdvanceService
                         }}</span></p>
                   </div>
 
