--- a/fe/src/app/booking/price-list-dialog/price-list-dialog.scss
+++ b/fe/src/app/booking/price-list-dialog/price-list-dialog.scss
@@ -1454,9 +1454,9 @@
   }
 
   .selected {
-    background-color: #fce793 !important;
+    background-color: #232323 !important;
     color: #795200 !important;
-    border-color: 1px solid #fce793 !important;
+    border-color: 1px solid #232323 !important;
   }
 
   .carousel-cell {
@@ -1607,7 +1607,7 @@
   }
 }
 
-::ng-deep .calendar-pick mat-dialog-container {
+::ng-deep .price-list mat-dialog-container {
   padding: 0 !important;
   overflow-x: visible !important;
   overflow-y: visible !important;
@@ -1619,7 +1619,7 @@
 
 
 
-::ng-deep .calendar-pick .mat-dialog-actions {
+::ng-deep .price-list .mat-dialog-actions {
   padding: 0;
 }
 
@@ -1727,17 +1727,7 @@ h6 {
 } */
 
 @media (max-width: 992px) {
-  ::ng-deep .bank_note {
-    top: 50px;
-  }
-
-  .hr_select_info_dialog {
-    border-bottom: solid 1px #888888;
-    border-bottom-style: solid;
-    margin-top: 10px;
-    margin-bottom: 0;
-    border-top: none;
-  }
+  
 
   .content-item {
     width: 100%;
@@ -1808,65 +1798,14 @@ h6 {
   ::ng-deep .modal-open .cdk-overlay-container {
     display: block;
   } */
-  ::ng-deep .calendar-pick mat-dialog-container {
+  ::ng-deep .price-list mat-dialog-container {
     min-height: auto !important;
   }
 
 }
 
-.bank_note {
-  padding: 0 10px;
-  text-align: initial;
-}
-
-.bank_note_title {
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 16px;
-  margin-bottom: 0;
-}
-
-.bank_note_title img {
-  width: 48px;
-  height: 20px;
-  margin: 13px 16px 13px 0;
-}
-
-.bank_note_description {
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 16px;
-}
-
 .content-scroll {
   overflow: auto;
-}
-
-.title_note {
-  text-align: left;
-  font-size: 15px;
-  font-weight: 600;
-  margin-bottom: 0.5rem;
-  // padding: 0 10px;
-}
-
-.booking-detail-information {
-  font-size: 13px;
-  font-weight: 400;
-
-  p {
-    font-size: 13px;
-    font-weight: 300;
-    margin-bottom: 0.3rem;
-  }
-}
-
-.note {
-  padding: 0px 10px;
-  font-weight: 700;
-  text-align: left;
-  font-size: 13px;
-  margin-top: 10px;
 }
 
 
@@ -1909,48 +1848,12 @@ h6 {
   font-weight: 600;
 }
 
-#servicePackage {
-  height: 35px;
-  width: 12%;
-  text-align: center;
+.rednoti{
+  font-size: 13px;
+  color: rgb(203, 13, 13);
+  margin-bottom: 0.5rem;
 }
 
-#serviceType {
-  height: 35px;
-  width: 30%;
-  text-align: center;
-}
-
-.date-pickertime {
-  display: flex;
-  margin-top: 1rem;
-
-  .pickday {
-    width: 15%;
-    height: 36px;
-    font-size: 11px;
-    margin-right: 3rem;
-  }
-
-  .showTime {
-    width: 50%;
-
-    span {
-      font-weight: 700;
-    }
-  }
-}
-
-.carrousel-cell i {
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-}
-
-.datetimeBtn i {
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
+.title_note{
+  font-weight: 700;
 }
