update booking schedule

--- a/fe/src/app/booking/booking.component.html
+++ b/fe/src/app/booking/booking.component.html
@@ -99,13 +99,16 @@
                   <h6 class="text-primary text-uppercase">Tiện ích bổ sung</h6>
                   <p class="description">Các loại hình dịch vụ tiện ích bổ sung là bao gồm
                     các khu vực và thiết bị không bao gồm trong dịch vụ dọn dẹp.</p>
-                  <p class="description">Sau đây là <u (click)="showPriceList()" style="font-size: 14px; font-weight: 600; cursor: pointer;">Bảng giá</u> các loại
+                  <p class="description">Sau đây là <u (click)="showPriceList()"
+                      style="font-size: 14px; font-weight: 600; cursor: pointer;">Bảng giá</u> các loại
                     hình dịch vụ tiện
                     ích HSM cũng cấp:</p>
                   <div class="extension-service">
-                    <span *ngFor="let extends of priceList" class="badge badge-pill badge-primary" [ngClass]="{'active': activeBadges[extends.parent.name]}" style="cursor: pointer;"
-                      (click)="extendsDialog(extends.parent.name)">{{extends.parent.name}}     
-                      <i class="fas" [ngClass]="{'fa-plus': !activeBadges[extends.parent.name], 'fa-minus': activeBadges[extends.parent.name]}"></i>
+                    <span *ngFor="let extends of priceList" class="badge badge-pill badge-primary"
+                      [ngClass]="{'active': activeBadges[extends.parent.name]}" style="cursor: pointer;"
+                      (click)="extendsDialog(extends.parent.name)">{{extends.parent.name}}
+                      <i class="fas"
+                        [ngClass]="{'fa-plus': !activeBadges[extends.parent.name], 'fa-minus': activeBadges[extends.parent.name]}"></i>
                     </span>
                     <p class="listAdvanceService" style="padding-top: 1rem;" *ngIf="true">* Danh sách tiện ích đã đăng
                       ký: <span style="font-weight: 700; font-size: 15px; color: darkred;">{{
@@ -116,6 +119,7 @@
                   <h6 class="text-primary text-uppercase">Thời gian</h6>
                   <p class="description" style="margin-bottom: 5px;">Có 2 sự lựa chọn cho khách hàng khi sử dụng dịch vụ
                     dọn dẹp đó là: <b>Sử dụng duy nhất</b> và <b>định kỳ</b></p>
+                  <p class="description" style="margin-bottom: 5px;">Khoảng thời gian sử dụng dịch vụ trong ngày bắt đầu từ: <b>8h sáng</b> cho tới trước <b>8h tối</b></p>
                   <div class="input-group">
                     <p style="width: 20%;">Hình thức sử dụng: </p>
                     <select [(ngModel)]="selectedTimeType" id="timeType" aria-describedby="timeType-help"
