--- a/fe/src/app/booking/booking.component.scss
+++ b/fe/src/app/booking/booking.component.scss
@@ -368,3 +368,7 @@ input::placeholder {
 span i {
   margin-left: 5px; /* Khoảng cách giữa chữ và icon */
 }
+
+.custom-margin{
+  margin-bottom: 10rem;
+}
