--- a/fe/src/app/booking/calendar-dialog/calendar-dialog.html
+++ b/fe/src/app/booking/calendar-dialog/calendar-dialog.html
@@ -6,81 +6,99 @@
     </div>
     <div class="content">
       <div class="content-scroll">
-        <div class="title_note"> * Vui lòng chọn các loại định kỳ:</div>
-        <div class="booking-detail-information">
-          <div class="host-information">
-            <div class="input-group">
-              <p>Loại định kỳ(*): </p>
-              <select [(ngModel)]="selectedServiceTypeId" id="serviceType" aria-describedby="serviceType-help" (ngModelChange)="selectedService($event)"
-                title="Loại định kỳ">
-                <option *ngFor="let service of serviceTypes" [value]="service">{{ service }}</option>
-              </select>
-            </div>
-            <div class="input-group">
-              <p>Thời gian định kỳ(*): </p>
-              <select [(ngModel)]="selectedServicePackageId" id="serviceType" aria-describedby="serviceType-help"
-                title="Thời gian định kỳ">
-                <option *ngFor="let package of servicePackages" [value]="package">{{ package }}</option>
-              </select>
-            </div>
-            <div class="date-pickertime" *ngIf="selectedTimeType">
-              <button type="button" class="btn btn-primary pickday" (click)="pickDate()">Chọn ngày
-                <i></i></button>
-              <ngb-datepicker class="calendar" *ngIf="showDatePicker" #dp [(ngModel)]="selectedDate"
-                (dateSelect)="hideDatePicker()" (navigate)="datePickerNavigate($event)"
-                [minDate]="minSelectableDate" [maxDate]="maxSelectableDate"></ngb-datepicker>
-              <p class="showTime" *ngIf="!showDatePicker && datePickerShow">* Lịch ngày bắt đầu: <span>{{
-                  datePickerShow
-                  }}</span>  <span *ngIf="pickServiceType != 1"> -  {{scheduleDescription}}</span></p>
-            </div>
-            <div class="date-pickertime" *ngIf="!selectedTimeType">
-              <button type="button" class="btn btn-primary pickday" (click)="pickCalendar()">Chọn lịch
-                <i></i></button>
-            </div>
-          </div>
-          <hr>
-          <div class="serviceType">
-            - Thông tin định kỳ của ngày
-             <!-- <b> {{scheduleDay.workDate}} ( {{scheduleDay.startTime}} -
-              {{scheduleDay.endTime}} )</b> : -->
-            <!-- <p>Trạng thái: {{scheduleDay.status}}</p>
-            <p>Dịch vụ tiện ích bổ sung: {{namesOfScheduleDay}}</p> -->
-          </div>
-          <div class="table-responsive">
-            <div class="showtime-options">
-              <carousel height="87px" cellsToShow="7" *ngIf="dateArray && dateArray.length >= 7">
-                <div [ngClass]="{'selected':selectedDate===showtime}" class="carousel-cell" (click)="viewDetailinSchedule(showtime)"
-                  *ngFor="let showtime of dateArray">
-                  <div class="top">{{getDay(showtime)}} <span>/{{getMonth(showtime)}}
-                    </span></div>
-                  <div class="bottom">{{getDateMonth(showtime)}}
-                  </div>
-                  <i *ngIf="serviceAddOns" class="fas fa-check-square" (click)="removeAddOns()"></i>
+        <div class="content-calendar">
+          <div class="input-information">
+            <div class="booking-detail-information">
+              <div class="title_note"> * Vui lòng chọn các loại định kỳ:</div>
+              <div class="host-information">
+                <div class="input-group">
+                  <p>Loại định kỳ(*): </p>
+                  <select [(ngModel)]="selectedServiceTypeId" id="serviceType" aria-describedby="serviceType-help"
+                    (ngModelChange)="selectedService($event)" title="Loại định kỳ">
+                    <option *ngFor="let service of serviceTypes" [value]="service">{{ service }}</option>
+                  </select>
                 </div>
-              </carousel>
-
-              <div class="select-date-container" height="87px" cellsToShow="7"
-                *ngIf="dateArray && dateArray.length < 7">
-                <div [ngClass]="{'selected':selectedDate===showtime}" class="datetimeBtn" (click)="viewDetailinSchedule(showtime)"
-                  *ngFor="let showtime of dateArray">
-                  <div class="top">{{getDay(showtime)}} <span>/{{getMonth(showtime)}}
-                    </span></div>
-                  <div class="bottom">{{getDateMonth(showtime)}}
+                <div class="input-group">
+                  <p>Thời gian định kỳ(*): </p>
+                  <select [(ngModel)]="selectedServicePackageId" id="serviceType" aria-describedby="serviceType-help"
+                    title="Thời gian định kỳ">
+                    <option *ngFor="let package of servicePackages" [value]="package">{{ package }}</option>
+                  </select>
+                </div>
+                <div class="input-group">
+                  <p>Giờ bắt đầu(*): </p>
+                  <div>                    
+                    <!-- Sử dụng trường input kiểu số -->
+                      <input type="tel" name="time" id="time"
+                      [class.red_border]="c_time"
+                      [class.red_border_no_background]="c_time && (_inTime.length === 0 || _inTime.trim().length === 0)"
+                      (blur)="blurExpDate(time)" pattern="\d*" placeholder="08:30" [(ngModel)]="_inTime" #time
+                      maxlength="5" (input)="ValidateExpDate(time, $event)" />
                   </div>
-                  <i *ngIf="serviceAddOns" class="fas fa-check-square" (click)="removeAddOns()"></i>
+                  <div *ngIf="c_time" style="width: 100%;" class="error">Vui lòng nhập thời gian trong khoảng 8h sáng tới trước 8h tối.</div>
+
                 </div>
               </div>
             </div>
+            <div class="calender-pick-info">
+              <p class="showTime title_note" *ngIf="true">* Thông tin lịch định kỳ (ngày bắt đầu dịch vụ):</p>
+              <div>{{
+                datePickerShow
+                }}<span *ngIf="pickServiceType != 1"> - {{scheduleDescription}}</span> </div>
+              <div *ngIf="scheduleTimeDescription">{{
+                scheduleTimeDescription
+                }}</div>
+            </div>
           </div>
-          <!-- <div class="table-responsive" style="margin-top: 2rem;">
+          <div class="pickTime">
+            <div class="showTime" *ngIf="true">* Chọn ngày bắt đầu <i class="fas fa-calendar-alt customer-icon"></i>:
+            </div>
+            <div class="date-pickertime" *ngIf="true">
+              <ngb-datepicker class="calendar" style="top: -1rem; padding: 10px !important;" *ngIf="true" #dp
+                [(ngModel)]="selectedDate" (dateSelect)="hideDatePicker()" (navigate)="datePickerNavigate($event)"
+                [minDate]="minSelectableDate" [maxDate]="maxSelectableDate"></ngb-datepicker>
+            </div>
+          </div>
+
+        </div>
+        <hr style="margin-top: 1rem;">
+        <div class="serviceType">
+          - Danh sách ngày dọn theo định kỳ
+        </div>
+        <div class="table-responsive">
+          <div class="showtime-options">
+            <carousel height="87px" cellsToShow="7" *ngIf="dateArray && dateArray.length >= 7">
+              <div [ngClass]="{'selected':selectedDate===showtime}" class="carousel-cell"
+                (click)="viewDetailinSchedule(showtime)" *ngFor="let showtime of dateArray">
+                <div class="top">{{getDay(showtime)}} <span>/{{getMonth(showtime)}}
+                  </span></div>
+                <div class="bottom">{{getDateMonth(showtime)}}
+                </div>
+                <i *ngIf="serviceAddOns" class="fas fa-check-square" (click)="removeAddOns()"></i>
+              </div>
+            </carousel>
+
+            <div class="select-date-container" height="87px" cellsToShow="7" *ngIf="dateArray && dateArray.length < 7">
+              <div [ngClass]="{'selected':selectedDate===showtime}" class="datetimeBtn"
+                (click)="viewDetailinSchedule(showtime)" *ngFor="let showtime of dateArray">
+                <div class="top">{{getDay(showtime)}} <span>/{{getMonth(showtime)}}
+                  </span></div>
+                <div class="bottom">{{getDateMonth(showtime)}}
+                </div>
+                <i *ngIf="serviceAddOns" class="fas fa-check-square" (click)="removeAddOns()"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="table-responsive" style="margin-top: 2rem;">
           <div class="showtime-bydate" *ngFor="let date of dateList">
             <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
             <span style="font-weight: 700; font-size: 16px"> {{date.workDate}} </span>
             <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
           </div>
         </div> -->
-        </div>
       </div>
-      <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button>
     </div>
+    <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button>
   </div>
+</div>
