--- a/fe/src/app/booking/calendar-dialog/add-service-dialog/add-service-dialog.scss
+++ b/fe/src/app/booking/calendar-dialog/add-service-dialog/add-service-dialog.scss
@@ -1645,8 +1645,8 @@ h6 {
   padding: 10px 20px 20px 20px;
   /* height: calc(100vh - 225px); */
   ;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  // overflow-y: scroll;
+  // overflow-x: hidden;
   min-height: 325px !important;
 
 }
@@ -1856,4 +1856,15 @@ h6 {
 
 .title_note{
   font-weight: 700;
+}
+
+.listAdvanceService{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.button-submit{
+  bottom: 4rem;
+  text-align: center;
+  position: relative;
 }
