--- a/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.html
+++ b/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.html
@@ -1,37 +1,38 @@
 <div mat-dialog-actions class="guide_class">
   <div class="dialog-container">
-    <div class="header-background"></div>
     <div class="header">
       <h6>Chọn nhân viên dọn dẹp</h6>
     </div>
-    <div class="filter-cleaner">
-      <div class="filter-search">Tên: <input #namesearch id="namesearch" placeholder="tên nhân viên" type="text"
-          aria-describedby="name-search-help" maxlength="50"></div>
-      <div class="filter-gender">Giới tính</div>
-      <div class="filter-age">Độ tuổi</div>
-      <button mat-button class="filter_btn" (click)="searchCleaner()">Tìm kiếm</button>
-    </div>
-    <!-- <div class="content row">
+    <div class="content">
       <div class="content-scroll">
-        <div class="title_note"> Danh sách nhân viên trực thuộc Cơ sở Phạm Văn Bạch </div>
-        <div class="note">*Lưu ý: Danh sách được tổng hợp dựa trên tiêu chí đánh giá và số năng kinh nghiệm</div>
-        <div class="cleaner" *ngFor="let item of listCleaner; let i = index">
-          <div class="cleaner_title"><img src="assets/img/cleaner/{{item.image}}"></div>
-          <div>
-            <p>{{item.name}}</p>
-            <p>{{item.gender}}</p>
-            <p>{{item.age}}</p>
+        <div class="filter-search">Tên: <input #namesearch id="namesearch" placeholder="tên nhân viên" type="text"
+            aria-describedby="name-search-help" maxlength="50"><span>
+            <button mat-button class="filter_btn" (click)="searchCleaner()">Tìm kiếm</button>
+          </span></div>
+      </div>
+      <div class="table-responsive">
+        <div class="showtime-options">
+          <div class="select-date-container" height="140px" cellsToShow="4" *ngIf="listCleaner.length > 0">
+            <div [ngClass]="{'selected':selectedCleaner===cleaner}" class="datetimeBtn"
+              (click)="viewDetailCleaner(cleaner)" *ngFor="let cleaner of listCleaner">
+              <div class="top">
+                <div class="left"><img src=""></div>
+              </div>
+              <div class="right">{{cleaner.name}} - {{cleaner.gender}} 
+              </div>
+            </div>
+            <div class="bottom">
+              <div class="d-flex align-items-center">
+                <span class="mr-2">{{cleaner.ratingScore}}</span>
+
+                <div class="star-rating" [innerHTML]="generateStarRating(cleaner.ratingScore)"></div>
+              </div>
+            </div>
+            <i *ngIf="serviceAddOns" class="fas fa-check-square" (click)="removeAddOns()"></i>
           </div>
-          <div class="cleaner_rating"> {{item.rate}} </div>
-          <div class="totle_rate"> ({{ item.total_rate }})
-          </div>
-          <div class="totle_pick"> Lượt được chọn: {{ item.total_pick }}
-          </div>
-          <hr class="hr_select_info_dialog">
-          <button mat-button class="detail_btn" (click)="cleanerRateDetail()"></button>
         </div>
       </div>
-    </div> -->
-    <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button>
+
+    </div>
   </div>
 </div>
